add textArea and Button

--- a/PayRoll.css
+++ b/PayRoll.css
@@ -115,3 +115,35 @@ select{
     color: #42515f;
     border-color: transparent;
 }
+.buttonParent{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 20px;
+
+}
+.button{
+    font-size: 17px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+    background: transparent;
+    border: none;
+    font-weight: 300;
+    min-width: 140px;
+    padding: 5px 5px;
+    border: 1px solid #707070;
+    cursor: pointer;
+}
+.submitButton{
+    border: none;
+    background-color: #f5f5f5;
+    margin-right: 30px;
+
+}
+.cancelButton{
+    text-decoration: none;
+    text-align: center;
+    margin-bottom: 10px;
+}
